<resources>
    <string name="app_name">Wordbox Solitaire</string>
    <string name="wb">Wordbox</string>
    <string name="sol">Solitaire</string>
    <string name="app_subtitle_list"> - saved games</string>
    <string name="app_subtitle_create"> - create game</string>
    <string name="games_list">Stored games</string>
    <string name="start">New Game</string>
    <string name="start_grid"> random letters - grid</string>
    <string name="start_tray"> random letters - tray</string>
    <string name="create_new"> create game</string>
    <string name="shuffle_grid">Shuffle on grid</string>
    <string name="shuffle_tray">Shuffle on tray</string>
    <string name="shuffle">Shuffle</string>
    <string name="unshuffle">Unshuffle</string>
    <string name="clear">Clear</string>

    <string name="save_game">Save</string>
    <string name="save_game_l">Save on phone</string>
    <string name="save_game_c">Save challenge in cloud</string>
    <string name="save_game_s">Save solution in cloud</string>


    <string name="game">game</string>
    <string name="answer">answer?</string>
    <string name="saved">game</string>
    <string name="saved_with_swaps">game (swaps: %1$d)</string>

    <string name="target_time">Target time in minutes (5–20)</string>
    <string name="stored_games">Saved games</string>

    <string name="restore">Restore</string>
    <string name="delete">Delete</string>
    <string name="send">Send</string>
    <string name="toggle">Toggle show letters</string>

    <string name="cloud_list">Get games from cloud</string>
    <string name="phone_list">Show games on phone</string>
    <string name="phone_clear">Clear games on phone</string>

    <string name="current">This Game</string>
    <string name="game_start">Start</string>
    <string name="game_pause">Pause</string>
    <string name="restart_timer">Reset timer</string>
<!--    <string name="timer_ended">⛔</string>-->

    <string name="prefs">Preferences (Time &amp; Tiles)</string>
    <string name="keyTimer">kd</string>
    <string name="pref_Timer">Game Duration</string>

    <string name="keyTiles">kt</string>
    <string name="pref_Tiles">Number of Tiles</string>

    <string name="keyGameCreator">kgc</string>
    <string name="gameCreator">Game creator</string>
    <string name="gameCreatorDefault">Set creator in Preferences</string>

    <!--  Toast messages-->

    <string name="toast_game_saved">Game saved!</string>
    <string name="toast_game_not_saved">Game not saved - no tiles!</string>
    <string name="toast_only_digits">Numbers only</string>
    <string name="toast_enter_between">Please enter 5 &#8211; 20 minutes</string>


    <!--  Error messages-->


</resources>