<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item android:title="@string/current">
        <menu>
            <item
                android:id="@+id/reset"
                android:icon="@drawable/ic_more_time"
                android:title="@string/restart_timer"
                app:showAsAction="never" />
            <item
                android:id="@+id/shuffle_game_grid"
                android:icon="@drawable/shuffle_grid"
                android:title="@string/shuffle_grid"
                app:showAsAction="never" />
            <item
                android:id="@+id/shuffle_game_tray"
                android:icon="@drawable/shuffle_tray"
                android:title="@string/shuffle_tray"
                app:showAsAction="never" />
            <item
                android:id="@+id/save_local"
                android:icon="@drawable/ic_baseline_save_24"
                android:title="@string/save_game_l"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/save_game_challenge"
                android:icon="@drawable/ic_baseline_save_24"
                android:title="@string/save_game_c"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/save_game_solution"
                android:icon="@drawable/ic_baseline_save_24"
                android:title="@string/save_game_s"
                app:showAsAction="ifRoom" />
        </menu>
    </item>

    <item
        android:title="@string/start"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/new_game_grid"
                android:icon="@drawable/new_grid"
                android:title="@string/start_grid"
                app:showAsAction="never" />
            <item
                android:id="@+id/new_game_tray"
                android:icon="@drawable/new_tray"
                android:title="@string/start_tray"
                app:showAsAction="never" />

            <item
                android:id="@+id/create_game"
                android:icon="@drawable/create_game"
                android:title="@string/create_new"
                app:showAsAction="never" />


        </menu>
    </item>


    <item
        android:id="@+id/gamesList"
        android:icon="@drawable/saved_games"
        android:title="@string/stored_games"
        app:showAsAction="never" />


    <item
        android:id="@+id/prefs"
        android:title="@string/prefs"
        app:showAsAction="never" />


    <!-- Settings, should always be in the overflow -->


</menu>